Added projects and systems in the test data - all tests are passing

--- a/test/fixtures/systems.yml
+++ b/test/fixtures/systems.yml
@@ -5,9 +5,16 @@ ADT:
   name: "ADT System"
   impact: "This project is primarly concern to do Tax Rebills"
   created_at: <%= 3.years.ago %>
+  project_id: 1
 
 most_recent:
   profile: "SRS-IPAR"
   name: "Mainframe IPAR System"
   impact: "Test Only"
   created_at: <%= Time.zone.now %>
+  project_id: 2
+  
+SRS-EC:
+  profile: "SRS-EC"
+  name: "Error Correction"
+  impact: "The impact is the field that goes there."
