added data to test fixture to use it as test data using rake db:fixtures:load command

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -12,7 +12,20 @@ ADTP4:
   project_number_str: "155275"
   project_description: "Rebill Duties and Taxes"
   
+
 BFLF:
     id: 3
     name: "BFLF - Rebill Re-Arch"
     project_number_str: "968268"
+    created_at: <%= 3.years.ago %>
+    
+most_recent:
+  name: "Fast Bill"
+  project_number_str: "987662"
+  created_at: <%= 2.weeks.ago %>
+  updated_at: <%= 1.week.ago %>
+
+AKINA:
+  name: "The Alphabet"
+  created_at: <%= 7.weeks.ago %>
+  updated_at: <%= Time.zone.now %>
