--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ rvm:
  - "2.2.1"
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
+script: bundle exec rake db:create
