added script line to rake test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ rvm:
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
 script: bundle exec rake db:create
+script: bundle exec rake test
