--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 before_script:
   - psql -c 'create database UberStatus_test;' -U postgres
+  - 
 
 language: ruby
 rvm:
  - "2.2.1"
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
-script: bundle exec rake db:create
-script: bundle exec rake test
+script: 
+  - bundle exec rake db:create
+  - bundle exec rake test
